K8s Final Exam/scenarios solution/03-qa-namespace-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-web
  namespace: qa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qa-web
  template:
    metadata:
      labels:
        app: qa-web
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
