K8s Final Exam/scenarios solution/05-logging-nodepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logging-app
  labels:
    app: logging-app
spec:
  nodeSelector:
    role: logging
  tolerations:
  - key: "node-role"
    operator: "Equal"
    value: "logging"
    effect: "NoSchedule"
  containers:
  - name: logger
    image: busybox
    command: ["sh", "-c", "while true; do sleep 3600; done"]
