K8s Final Exam/scenarios solution/07-db-secret-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-with-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-secret
  template:
    metadata:
      labels:
        app: backend-secret
    spec:
      containers:
      - name: app
        image: python:3.9-slim
        ports:
        - containerPort: 5000
