K8s Final Exam/scenarios solution/08-init-container-emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-init
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-init
  template:
    metadata:
      labels:
        app: data-init
    spec:
      volumes:
      - name: data
        emptyDir: {}
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
