K8s Final Exam/scenarios solution/16-cni-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
name: test-pod-a
spec :
containers:
- name: test
image: busybox
command: ["sh", "-c", "sleep 3600"]
---
apiVersion: v1
kind: Pod
metadata:
name: test-pod-b
spec:
containers :
- name: test
image: busybox
command: ["sh", "-c", "sleep 3600"]
